# test-python-package

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
blog/: index.html
blog/2025/09/13/hello-world/: index.html
blog/archive/2025/: index.html
blog/category/tech/: index.html
deployment/codeartifact-setup/: index.html
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: hello-world.md
docs/deployment/: codeartifact-setup.md
docs/getting_started/: installation.md  quick_start.md
docs/handbooks/coding_style/: ansible.md  python.md
docs/handbooks/operation_guideline/mkdocs/: blog.md  mermaid.md
docs/mermaid/: index.md
docs/mkdocs/: code_anon.md  index.md
docs/mkdocs/hogehoge/: fuga.md
docs/reference/: hoge.md  yamause.md
docs/systems/: yamause.md
getting_started/installation/: index.html
getting_started/quick_start/: index.html
handbooks/: index.html
handbooks/architecture_guideline/aws/: index.html
handbooks/architecture_guideline/fastapi/: index.html
handbooks/best_practices/: index.html
handbooks/best_practices/fastapi.md/: index.html
handbooks/best_practices/python_packaging/: index.html
handbooks/coding_style/ansible/: index.html
handbooks/coding_style/python/: index.html
handbooks/operation_guideline/: index.html
handbooks/operation_guideline/aws/: index.html
handbooks/operation_guideline/mkdocs/: index.html
handbooks/operation_guideline/mkdocs/blog/: index.html
handbooks/operation_guideline/mkdocs/code_anon/: index.html
handbooks/operation_guideline/mkdocs/mermaid/: index.html
handbooks/security_guideline/: index.html
handbooks/security_guideline/aws/: index.html
handbooks/test_guideline/: index.html
handbooks/test_guideline/python/: index.html
mkdocs/: index.html
mkdocs/code_anon/: index.html
mkdocs/hogehoge/: index.html
mkdocs/hogehoge/fuga/: index.html
mkdocs/mermaid/: index.html
reference/yamause/: index.html
search/: search_index.json
src/yamause/: __init__.py  __main__.py  _version.py  example.py
systems/: index.html
systems/yamause/: index.html
tests/: test_yamause.py
yamause/: __init__.py  example.py
