[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yamause"
authors = [
  { name="Yamause", email="yamause@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
yamause = "yamause.example:say"

[tool.hatch.version]
path = "yamause/__about__.py"
