[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yamause"
dynamic = ["version"]
authors = [
  { name="Yamause", email="yamause@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://yamause.github.io/test-python-package/"
Issues = "https://github.com/yamause/test-python-package/issues"

[project.scripts]
yamause = "yamause.example:say"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/yamause/_version.py"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
